# imt

./: CMakeLists.txt  README.md  install.sh
doc/: Doxyfile
imt/: CMakeLists.txt  main.cpp
imt/include/controller/: controller.hpp  cthread.hpp  manager.hpp  observer.hpp  router.hpp  subject.hpp
imt/include/core/: boxes.hpp  command.hpp  core.hpp  deepreader.hpp  processor.hpp  reader.hpp  writer.hpp
imt/include/model/: model.hpp  playlist.hpp  subject.hpp  type.hpp
imt/include/view/: helpbrowser.hpp  mainview.hpp  playercontrols.hpp  splashview.hpp  videoview.hpp  view.hpp
imt/src/: main.cpp
imt/src/controller/: cthread.hpp  manager.cpp  router.cpp  subject.cpp
imt/src/core/: boxes.cpp  command.cpp  deepreader.cpp  processor.cpp  reader.cpp  writer.cpp
imt/src/model/: subject.cpp
imt/src/view/: mainview.cpp  playercontrols.cpp  splashview.cpp  videoview.cpp
resources/assets/css/: style.css
resources/assets/json/: config.json
resources/assets/qhc/: summary.qch  summary.qhc  summary.qhcp  summary.qhp
resources/assets/tree/: splash.ui
tests/: CMakeLists.txt
tests/include/: auxilia.hpp  vera.hpp
tests/src/: main.cpp  vera.cpp
vera/: CMakeLists.txt
vera/include/controller/: controller.hpp  manager.hpp  observer.hpp  router.hpp  subject.hpp
vera/include/core/: backwriter.hpp  boxes.hpp  command.hpp  core.hpp  deepreader.hpp  processor.hpp  reader.hpp  writer.hpp
vera/include/model/: ambiant.hpp  kinect.hpp  measurements.hpp  model.hpp  pattern.hpp  playlist.hpp  robots.hpp  sensor.hpp  type.hpp  wearables.hpp  xsens.hpp
vera/include/view/: annotation.hpp  audiochart.hpp  depth.hpp  helpbrowser.hpp  histogramchart.hpp  license.hpp  mainview.hpp  playercontrols.hpp  qcustomplot.hpp  splashview.hpp  videoview.hpp  view.hpp
vera/src/: main.cpp
vera/src/controller/: manager.cpp  observer.cpp
vera/src/core/: backwriter.cpp  boxes.cpp  deepreader.cpp  processor.cpp  writer.cpp
vera/src/model/: ambiant.cpp  kinect.cpp  measurements.cpp  pattern.cpp  playlist.cpp  robots.cpp  sensor.cpp  wearables.cpp  xsens.cpp
vera/src/view/: annotation.cpp  audiochart.cpp  depth.cpp  helpbrowser.cpp  histogramchart.cpp  license.cpp  mainview.cpp  playercontrols.cpp  qcustomplot.cpp
